# lv_mgr

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  build.txt  linker.ld  lv_mgr.code-workspace
docs/: lv_obj_class.md
lib/: CMakeLists.txt
lib/config/: lv_conf.h
lib/lv_drivers/: CMakeLists.txt
lib/lv_drivers/sdl/: sdl.c
lib/lv_drivers/wayland/: README.md
lib/lvgl/demos/benchmark/: README.md
lib/lvgl/demos/music/: README.md
lib/lvgl/docs/get-started/: quick-overview.md
lib/lvgl/docs/get-started/os/: rt-thread.md
lib/lvgl/docs/layouts/: flex.md  grid.md
lib/lvgl/docs/others/: gridnav.md
lib/lvgl/docs/overview/: animation.md  coords.md  drawing.md  font.md  indev.md  object.md  scroll.md  timer.md
lib/lvgl/docs/porting/: display.md  indev.md  os.md  project.md
lib/lvgl/docs/widgets/core/: dropdown.md  roller.md  table.md
lib/lvgl/docs/widgets/extra/: calendar.md  colorwheel.md
lib/lvgl/env_support/cmsis-pack/: README.md
lib/lvgl/examples/libs/freetype/: lv_example_freetype_1.c
lib/lvgl/examples/widgets/dropdown/: lv_example_dropdown_1.c
lib/lvgl/src/misc/: lv_mem.c
lib/lvgl/tests/unity/: generate_test_runner.rb
src/: CMakeLists.txt
src/gui/: gui.c  gui.h  gui_param.c
src/gui/mgr/: lv_mgr_defs.h  lv_mgr_page.c  lv_mgr_page.h
src/gui/page/: gui_master.c  gui_master.h  gui_pages.h  start_up.c  start_up.h
src/platform/windows/: CMakeLists.txt  linker.ld  main.c
src/port/: lv_conf.h  lv_drv_conf.h  main.c  win_param.c  win_param.h
tests/: CMakeLists.txt  tests.h
tests/freetype/: lv_test_freetype.c  lv_test_freetype.h
tests/gui/: test_gui.c  test_gui.h  test_gui_page_cfg.h  test_page1.c  test_page2.c  test_page3.c  test_page4.c  test_page5.c
tools/: clean.bat  cmake_build.bat  cmake_config.bat  cmake_rebuild.bat  run.bat  temp.c
